# LeagueManager

./: CMakeLists.txt  CMakeLists_old.txt  RiotAccounts.db  check_if_client_open.cpp  compile.sh  eventlogger.hpp  helpers.h
src/: charStrToWideStr.hpp  eventlogger.hpp  globals.hpp  loadSettings.cpp  main.cpp  settings.json
